--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: slider_popup
-description: A new Flutter plugin.
+description: A Slider Animated popup.
 version: 0.0.1
-homepage:
+homepage: https://github.com/RitikRD/Slider_Popup.git
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
 
 dev_dependencies:
   flutter_test:
